reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__pipeline.rs_line_1020_col_5_001.log

*** crates/tracewake-core/src/actions/pipeline.rs:1020:5: replace debug_only_facts -> Vec<CheckedFact> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-core/src/actions/pipeline.rs
+++ replace debug_only_facts -> Vec<CheckedFact> with vec![Default::default()]
@@ -1012,21 +1012,17 @@
     checked_facts
         .iter()
         .filter(|fact| is_actor_visible_fact(fact))
         .cloned()
         .collect()
 }
 
 fn debug_only_facts(checked_facts: &[CheckedFact]) -> Vec<CheckedFact> {
-    checked_facts
-        .iter()
-        .filter(|fact| !is_actor_visible_fact(fact))
-        .cloned()
-        .collect()
+    vec![Default::default()] /* ~ changed by cargo-mutants ~ */
 }
 
 fn is_actor_visible_fact(fact: &CheckedFact) -> bool {
     matches!(
         fact.key(),
         crate::actions::report::CheckedFactKey::ActionId
             | crate::actions::report::CheckedFactKey::ActorId
             | crate::actions::report::CheckedFactKey::Reason


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/pipeline.rs` has changed (1781906037.983925796s, 3s after last build at 1781906034.475925790s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `CheckedFact: Default` is not satisfied
    --> crates/tracewake-core/src/actions/pipeline.rs:1020:10
     |
1020 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
     |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `CheckedFact`
    --> crates/tracewake-core/src/actions/report.rs:178:1
     |
 178 | pub struct CheckedFact {
     | ^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `actions::report::CheckedFact: Default` is not satisfied
    --> crates/tracewake-core/src/actions/pipeline.rs:1020:10
     |
1020 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
     |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `actions::report::CheckedFact`
    --> crates/tracewake-core/src/actions/report.rs:178:1
     |
 178 | pub struct CheckedFact {
     | ^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
